--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.5",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.3",
+    "formik": "^2.4.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -23,7 +25,10 @@
     "react-router-dom": "^6.23.1",
     "react-router-hash-link": "^2.4.3",
     "recharts": "^2.12.7",
-    "sort-by": "^0.0.2"
+    "sonner": "^1.5.0",
+    "sort-by": "^0.0.2",
+    "web3": "^4.13.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
